# inventory-ai

./: .gitignore
backend/: .env.example  pyproject.toml  run.py
backend/app/: __init__.py
backend/app/models/: inventory.py  sales_record.py  user.py
backend/app/routes/: auth.py  health.py  inventory.py
backend/app/services/: auth_service.py  auth_services.py  forecasting_service.py  inventory_services.py  lstm_forecasting_service.py  token_service.py
backend/migrations/versions/: 26c7f4fb0482_add_sales_records_table.py  581a54994442_add_is_verified_to_users.py
backend/scripts/: generate_synthetic_sales.py
backend/tests/: conftest.py  test_forecasting_service.py  test_lstm_forecasting_service.py
docs/: requirements.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: axiosInstance.js
frontend/src/app/: store.js
frontend/src/components/: AddItemForm.jsx  FloatingBox.jsx  Footer.jsx  ForeCastPanel.jsx  ForecastModal.jsx  InventoryTable.jsx  LoginForm.jsx  LowStockPanel.jsx  NavBar.jsx  ProtectedRoute.jsx  RegisterForm.jsx  Spinner.jsx  StatsCards.jsx
frontend/src/pages/: Dashboard.jsx  LandingPage.jsx  LoginPage.jsx  RegisterPage.jsx  VerifyEmailPage.jsx
