[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "flask-jwt-extended>=4.7.4",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-flask>=1.3.0",
]
